--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.3",
+    "express": "^4.12.3",
     "parse-config": "git://github.com/damonmcminn/parse-config.git",
     "socket.io": "^1.3.5",
     "source-map-support": "^0.2.10"
