--- a/package.json
+++ b/package.json
@@ -1,21 +1,49 @@
 {
-  "name": "rt.practicehub",
-  "version": "1.0.0",
-  "description": "",
+  "name": "Kinjarling",
+  "version": "0.1.0",
+  "description": "Realtime web provider with integrated server API",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-server": "mocha spec/api",
+    "test-server-watch": "nodemon -w lib/src -w spec/api -i admin -x 'mocha spec/api'",
+    "test-browser": "echo 'Server MUST be up\n' && karma start --single-run",
+    "browser-watchify": "watchify lib/client/main.js --debug -o static/kinjarling.min.js",
+    "browser-build": "browserify lib/client/main.js | uglifyjs -cm > static/kinjarling.min.js",
+    "babel-watch": "babel -w es6 --out-dir lib --source-maps",
+    "babel": "babel es6 --out-dir lib --source-maps",
+    "api": "DEBUG=socket.io* nodemon index.js -w es6 -i es6/client --config=~/conf/rt/conf.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "cors": "^2.6.0",
     "express": "^4.12.3",
-    "parse-config": "git://github.com/damonmcminn/parse-config.git",
+    "lodash": "^3.9.1",
+    "mongoose": "^4.0.3",
+    "passport": "^0.2.2",
+    "passport-http-bearer": "^1.0.1",
     "socket.io": "^1.3.5",
-    "source-map-support": "^0.2.10"
+    "socket.io-client": "^1.3.5"
+  },
+  "devDependencies": {
+    "babel": "^5.4.7",
+    "babelify": "^6.1.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.32",
+    "karma-browserify": "^4.2.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "mocha": "^2.2.5",
+    "nodemon": "^1.3.7",
+    "source-map-support": "^0.2.10",
+    "supertest": "^1.0.1",
+    "uglifyjs": "^2.4.10",
+    "watchify": "^3.2.1"
   }
 }
