Update description; remove deprecated --config flag

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Kinjarling",
   "version": "0.1.0",
-  "description": "Realtime web provider with integrated server API",
+  "description": "Pub/Sub service with webhooks",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -14,7 +14,7 @@
     "browser-build": "browserify lib/client/main.js | uglifyjs -cm > static/kinjarling.min.js",
     "babel-watch": "babel -w es6 --out-dir lib --source-maps",
     "babel": "babel es6 --out-dir lib --source-maps",
-    "api": "DEBUG=socket.io* nodemon index.js -w es6 -i es6/client --config=~/conf/rt/conf.json"
+    "api": "DEBUG=socket.io* nodemon index.js -w es6 -i es6/client"
   },
   "author": "",
   "license": "ISC",
