--- a/package.json
+++ b/package.json
@@ -30,17 +30,14 @@
     "socket.io-client": "^1.3.5"
   },
   "devDependencies": {
-    "babel": "^5.4.7",
     "babelify": "^6.1.1",
-    "jasmine-core": "^2.3.4",
+    "browserify": "^10.2.3",
     "karma": "^0.12.32",
     "karma-browserify": "^4.2.1",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^1.0.2",
-    "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
-    "mocha": "^2.2.5",
-    "nodemon": "^1.3.7",
     "source-map-support": "^0.2.10",
     "supertest": "^1.0.1",
     "uglifyjs": "^2.4.10",
