--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^1.3.5"
   },
   "devDependencies": {
+    "babel": "^5.5.4",
     "babelify": "^6.1.1",
     "browserify": "^10.2.3",
     "karma": "^0.12.32",
@@ -38,6 +39,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^1.0.2",
     "karma-requirejs": "^0.2.2",
+    "mocha": "^2.2.5",
     "source-map-support": "^0.2.10",
     "supertest": "^1.0.1",
     "uglifyjs": "^2.4.10",
